--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -7,16 +7,23 @@
     <style>
         body{
         height: 100vh;
-        background-color: black;
+        /*background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
+
+        /* shorthand - background color > image > position > repeat > [size] > attachment*/
+
+        background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+        background-size: cover;
+
         }
 
         main{
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -27,7 +34,11 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore expedita sed nisi quas, magnam veritatis nostrum ad eum asperiores ut! Ut consequatur, unde itaque eligendi quas nam dolor neque illo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque maxime consequuntur repellendus deleniti molestiae animi expedita. Rerum dicta ut quibusdam quod, nostrum temporibus tempore! Animi quia repellat dolor necessitatibus quaerat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente qui minima repellat culpa, impedit illum ipsa quidem odio natus porro! Quas optio veniam nulla incidunt eius iusto commodi corporis! Voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed accusantium commodi perspiciatis et consequuntur inventore nemo tempora eligendi, necessitatibus nihil odio suscipit, doloribus recusandae. Architecto vero numquam excepturi sequi at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque delectus amet dolorum, autem voluptate ab quibusdam. Neque aspernatur placeat quibusdam eius fugit iure iste omnis a rerum. Eligendi, natus ipsa. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus maxime iste impedit quibusdam sit. Mollitia est laboriosam incidunt? Esse earum, in quia quae molestiae fugiat adipisci ipsam quo quibusdam alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis recusandae iusto totam nobis quae doloremque deleniti necessitatibus. Dicta inventore temporibus, hic expedita, aut labore quaerat voluptatem cum tempora fugit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quam qui aspernatur incidunt tenetur temporibus vero, cum ut deleniti quae culpa hic suscipit quibusdam est aliquam minus reiciendis. Ducimus, nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore assumenda deserunt? Iste quibusdam distinctio pariatur nostrum eum repudiandae omnis maxime nisi reiciendis doloribus delectus, odit ipsa? Repudiandae, eveniet voluptates! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum earum doloribus laborum magni commodi sint architecto sit veniam ipsam vitae? Corrupti, recusandae sed quasi architecto veniam pariatur saepe? Dicta, delectus! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus ratione vitae dignissimos non eius voluptatibus eaque, rem, maxime eos alias nobis eligendi repellat iste odit? Beatae dignissimos voluptate sit aliquid. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio laudantium laboriosam quae recusandae unde, consequuntur, quia saepe placeat eaque ex dignissimos, eius ad debitis laborum eveniet fugiat. Unde, rerum deleniti.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ratione! Obcaecati assumenda officia, error, totam nisi earum eos repellat ratione dignissimos nihil quibusdam necessitatibus ab vitae sit cumque nostrum labore.</p>
 
     </main>
     
