--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table{
         width: 500px;
         border-collapse: collapse;
+        position: relative;
         }
 
         td, th{
@@ -30,8 +31,18 @@
         }
 
         thead, tfoot{
-        background-color: gray;
+        background-color: rgb(52, 52, 52);
         color: white;
+        }
+
+        thead > tr > th{
+        position: sticky;
+        top: -1px;
+        background-color: rgb(52, 51, 51);
+        }
+
+        tbody > tr:nth-child(2n) {
+        background-color: lightgray;
         }
 
         td.num{
