--- a/Exercicios/ex026/mq005/index.html
+++ b/Exercicios/ex026/mq005/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Média Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
      <h1>Meu Site</h1>
-     <menu>
+     <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+     <menu id="itens">
         <ul>
            <li><a href="#">Opção 1</a></li>
            <li><a href="#">Opção 2</a></li>
@@ -22,13 +25,22 @@
     <main>
         <article>
         <h2>Testando Media Query</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius illum laborum nam tenetur quod rerum recusandae tempore voluptates iure inventore quo fuga ratione, aperiam praesentium. Odit sit officiis quibusdam asperiores?lore</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius illum laborum nam tenetur quod rerum recusandae tempore voluptates iure inventore quo fuga ratione, aperiam praesentium. Odit sit officiis quibusdam asperiores?lore Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quia totam alias aut voluptatem! Expedita, nihil ea, unde quis error placeat suscipit esse consectetur recusandae explicabo molestiae pariatur. Unde, commodi! </p>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad atque architecto similique. Officia, quia molestiae? Iusto cum pariatur aspernatur non cumque! Eius laudantium dicta vero, enim quis minima quas sapiente?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad atque architecto similique. Officia, quia molestiae? Iusto cum pariatur aspernatur non cumque! Eius laudantium dicta vero, enim quis minima quas sapiente? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perferendis explicabo accusamus optio dignissimos unde magnam adipisci tempore ex quod! Cumque aspernatur vitae similique perferendis nobis quod eveniet voluptate recusandae.</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis obcaecati facilis doloribus libero culpa pariatur molestiae, laudantium nobis ipsa veniam mollitia consequatur molestias voluptas consectetur est ad impedit ipsam perferendis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis obcaecati facilis doloribus libero culpa pariatur molestiae, laudantium nobis ipsa veniam mollitia consequatur molestias voluptas consectetur est ad impedit ipsam perferendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio qui obcaecati quam laudantium quisquam nostrum aut aspernatur porro. Corporis ducimus, praesentium iusto accusantium recusandae odio fugiat id esse repellat eius!</p>
         </article>
     </main>
+    <script>
+      function clickMenu(){
+        if (itens.style.display =='block'){
+            itens.style.display ='none'
+        } else {
+            itens.style.display ='block'
+        }
+      }
+    </script>
     
 </body>
 </html>
